force-app/main/default/objects/History__c/History__c.object-meta.xml
<CustomObject>
    <label>History</label>
    <nameField>
        <displayFormat>HIS-{DD}/{MM}/{YYYY}-{000000}</displayFormat>
        <label>History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>