force-app/main/default/objects/History__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>