force-app/main/default/objects/History__c/fields/EntityID__c.field-meta.xml
<CustomField>
    <fullName>EntityID__c</fullName>
    <label>EntityID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>