force-app/main/default/objects/History__c/fields/RelAccount__c.field-meta.xml
<CustomField>
    <fullName>RelAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>History</relationshipLabel>
    <relationshipName>History</relationshipName>
    <type>Lookup</type>
</CustomField>