force-app/main/default/objects/History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>EntityID__c</columns>
    <columns>Memo__c</columns>
    <columns>Operation__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>